<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Scorll_Style"
    android:background="#fff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_height"
            android:layout_alignParentTop="true"
            android:background="@color/bg_nav_color"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="视频详情"
                android:textColor="#fff"
                android:textSize="@dimen/text_one" />

            <Button
                android:id="@+id/btn_return"
                android:layout_width="100dip"
                android:layout_height="@dimen/nav_height"
                android:layout_marginLeft="15dip"
                android:background="#00000000"
                android:drawableLeft="@drawable/icon_return"
                android:gravity="left|center_vertical" />

            <!-- <Button -->
            <!-- android:id="@+id/btn_edit" -->
            <!-- android:layout_width="100dip" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_gravity="right|center_vertical" -->
            <!-- android:layout_marginRight="10dp" -->
            <!-- android:background="#00000000" -->
            <!-- android:gravity="right|center_vertical" -->
            <!-- android:text="编辑" -->
            <!-- android:textColor="#fff" -->
            <!-- android:textSize="@dimen/text_three" /> -->
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/video_image"
                style="@style/Image_Style"
                android:layout_margin="@dimen/margin_three" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <!-- <TextView -->
                    <!-- android:id="@+id/text_name" -->
                    <!-- android:layout_width="wrap_content" -->
                    <!-- android:layout_height="wrap_content" -->
                    <!-- android:gravity="center_vertical" -->
                    <!-- android:text="@string/text_name_tostring" -->
                    <!-- android:textColor="#000" -->
                    <!-- android:textSize="@dimen/text_four" /> -->

                    <TextView
                        android:id="@+id/text_name_name"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="@dimen/text_four" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_daoyan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/text_daoyan_tostring"
                        android:textColor="#000"
                        android:textSize="@dimen/text_four" />

                    <TextView
                        android:id="@+id/text_daoyan_name"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="@dimen/text_five" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_video_actor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/text_actor_tostring"
                        android:textColor="#000"
                        android:textSize="@dimen/text_four" />

                    <TextView
                        android:id="@+id/text_actor_name"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:gravity="left|center_vertical"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="@dimen/text_five" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_video_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/text_years_tostring"
                        android:textColor="#000"
                        android:textSize="@dimen/text_four" />

                    <TextView
                        android:id="@+id/text_years_time"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="@dimen/text_five" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_down"
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:background="@drawable/image_login_btn_ok"
                        android:gravity="center"
                        android:text="@string/btn_down"
                        android:textColor="#fff"
                        android:textSize="@dimen/text_four" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/vedio_intro_btn"
            style="@style/Button_Style"
            android:background="@drawable/image_vedio_btn_nav"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/btn_intro" />

        <TextView
            android:id="@+id/text_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:text="@string/text_default"
            android:textColor="#111"
            android:textSize="@dimen/text_six" />
    </LinearLayout>

</ScrollView>